# zephyr_bno055_driver

./: CMakeLists.txt  Kconfig  Readme.md  prj.conf
include/: bno055_driver.hpp
samples/basic/: CMakeLists.txt  esp32.overlay  nucleo_h7a3zi_q.overlay  prj.conf
samples/basic/src/: main.cpp
src/: bno055_driver.cpp
zephyr/: module.yml
